--- a/project1/pages/admin.html
+++ b/project1/pages/admin.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <h1>Admin Form</h1>
-        <form action="/getAdmin" method="get">
+        <form action="/postAdmin" method="post">
             <label for="adminID">Admin ID</label>
             <input type="text" name="adminID" id="adminID">
 
