✨ Added upload files to admin page

--- a/project1/pages/admin.html
+++ b/project1/pages/admin.html
@@ -1,9 +1,9 @@
 <html>
     <body>
         <h1>Admin Form</h1>
-        <form action="/postAdmin" method="post">
-            <label for="adminID">Admin ID</label>
-            <input type="text" name="adminID" id="adminID">
+        <form action="/postAdmin" enctype="multipart/form-data" method="post">
+            <label for="adminId">Admin ID</label>
+            <input type="text" name="adminId" id="adminId">
 
             <label for="firstName">First Name</label>
             <input type="text" name="firstName" id="firstName">
@@ -14,6 +14,9 @@
             <label for="department">Department</label>
             <input type="text" name="department" id="department">
 
+            <label for="file">Select File:</label>
+            <input type="file" name="file" id="file">
+            <br>
             <input type="submit" value="Submit">
         </form>
         <style>
